fix media queries and nav bar alignment bug

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -5,7 +5,6 @@ html {
     height: 100%;
     margin: 0 auto;
     max-width: 1366px;
-
 }
 
 body {
@@ -19,7 +18,21 @@ body {
     margin-top: 5em;
     background-color: rgba(17, 17, 17, 0.96);
     color: white;
+}
 
+.alert-warning{
+    color: yellow;
+    background-color: #000000;
+}
+
+.jumbotron {
+    border-radius: 12px;
+    color: white;
+    background-size: cover;
+    background-position: center;
+    background-image: url(coding.png);
+    width: 100%;
+    height: 10%;
 }
 
 /*=============== Main Nav =================*/
@@ -38,6 +51,11 @@ body {
 }
 #logo {
     color: yellow;
+}
+
+.width-eighty{
+    max-width: 1366px;
+    margin: 0 auto;
 }
 
 ul.dropdown-menu, #dropdown1 {
@@ -62,35 +80,12 @@ ul.dropdown-menu, #dropdown3 {
 /*================= Grid =====================*/
 .row {
     border-bottom: 0.1em solid;
-    border-bottom-color: #737373;
+    border-bottom-color: white;
 }
 .col-sm-4 {
     padding: 1em;
     overflow: hidden;
 }
-
-.alert-warning{
-
-    color: yellow;
-}
-
-.alert{
-    background-color: #000000;
-}
-
-.jumbotron {
-    border-radius: 12px;
-    color: white;
-    background-size: cover;
-    background-position: center;
-    background-image: url(coding.png);
-    width: 100%;
-    height: 10%;
-    background-color: #292929;
-
-}
-
-
 
 /*=============== Forms ==================*/
 
@@ -100,8 +95,6 @@ form {
     padding: 2em;
     margin-bottom: 1em;
 }
-
-
 
 textarea {
     height: 2em;
@@ -123,13 +116,6 @@ textarea {
 .centered {
     margin: 0 auto;
 }
-.width-eighty{
-    width: 68%;
-    margin: 0 auto;
-}
-
-
-
 
 /*================= Links ===================*/
 
@@ -489,7 +475,7 @@ div.flask-pagedown-preview h3 {
 }
 
 /* Small Devices, Tablets */
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 850px) {
     .sidebar-right-index {
         display: none;
         width: 0px;
@@ -511,6 +497,30 @@ div.flask-pagedown-preview h3 {
 
     .post-tabs {
         width: 100%;
+    }
+    .navbar-header {
+        float: none;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin: 7.5px -15px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
     }
 }
 
@@ -553,8 +563,6 @@ div.flask-pagedown-preview h3 {
     }
 
 }
-
-
 
 /*=============== Styles for AD (This has been removed but will return)==============*/
 
